# EdgeVisionRT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  setup.sh
calibration_images/: filelist.txt
docs/: ARCHITECTURE.md  STATUS.md
include/: asm_kernels.h  benchmark.h  common.h  drm_display.h  highgui_minimal.h  inference_engine.h  input_pipeline.h  neon_preprocess.h  postprocess.h  video_writer.h
models/yolov8n_ncnn_model/: metadata.yaml  model.fp16.param  model.int8.param  model.ncnn.param  model.table  model_ncnn.py
scripts/: analyze_benchmark.py
src/: asm_kernels.S  benchmark.cpp  inference_engine.cpp  input_pipeline.cpp  main.cpp  neon_preprocess.cpp  postprocess.cpp
